bk_ida/gccida/c2/build_function_call
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:1981:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:1982:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:1990:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:1995:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:2017:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v42; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:2018:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v43; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:2019:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:2020:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:2026:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // [rsp+10h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:2031:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v56; // [rsp+30h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:2039:18: error: expected identifier or '('
 struct function = function->vector.elements; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:2040:7: error: expected expression
if (  struct function == ( tree)global_trees || v3->common.type != function->common.type ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:2106:26: error: expected expression
if ( v20 == ( tree_node *)global_trees ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/c-typeck.c:2106:15: error: use of undeclared identifier 'tree_node'
if ( v20 == ( tree_node *)global_trees ) 
              ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_function_call/src/obj/c-typeck.o] Error 1
